apps/pihole/rosequartz/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-a
  namespace: pihole
spec:
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  hostnames:
    - pihole-a.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-a-web
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-b
  namespace: pihole
spec:
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  hostnames:
    - pihole-b.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-b-web
          port: 80
